# BadApple

./: .gitattributes  Cargo.toml  README.md
src/: charvideo_cp.txt  main.rs
step1/: video2char.py
step2/: compress.py
