[package]
name = "badapple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "BadApple"
path = "src/main.rs"

[dependencies]
flate2 = "1"
egui = "0.18.1"
eframe = { version = "0.18.0", features = ["persistence"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
soloud = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9" , features = ["playsoundapi"]}

[profile.release]
opt-level = "z" # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"